        SS   tt   eeeeee  ll   ll   aaaaa  --  "An Atari 2600 VCS Emulator"
    SS  SS   tt   ee      ll   ll  aa  aa
     SSSS     ttt  eeeee llll llll  aaaaa

===========================================================================
                              Release History
===========================================================================

6.0 to 6.x: (MM dd, 2019)

  * Updated internal ROM properties database to ROM-Hunter version 15
    (thanks go to RomHunter for his tireless research in this area).
    Related to this, updated the snapshot collection.

  * Added various developer options for oddball TIAs: (TODO: doc)
     - delayed playfield bits
     - delayed playfield color
     - delayed player 0 swap
     - delayed player 1 swap
     - stuffed player move

  * Completely removed 'Display_Height' stuff. (TODO: doc)

  * Disabled some developer options for 'Player settings'. (TODO: doc)

  * Enhanced command dialog to display current state. 

  * Added automatic controller detection. (TODO: Stella.pro cleanup)

  * Removed superfluous controller option 'PADDLES_IDIR'.

  * Added hotkey for sound on/off.

  * Fixed not working 7800 pause key.

  * Fixed display of negative values in debugger; sometimes they were
    shown as positive.

  * Fixed 'Dancing Plate (Unknown) (PAL)' to use joystick.

-Have fun!


5.1.3 to 6.0: (December 23, 2018)

  * Note: because of major TIA sound changes, the state file format has
          changed, and old state files will not work with this release.

  * New cycle exact audio core based on work by Chris Brenner (crispy);
    greatly improved audio emulation accuracy (i.e. E.T., Ms. Pacman).

  * Full rewrite of the audio subsystem; resample TIA output to target
    sample rate directly in Stella.

  * Added option to force stereo sound for all ROMs, or to use the
    setting on a per-ROM basis.

  * Threading: decouple emulation from frame rendering.
