@@ -1968,9 +1968,9 @@
     </tr>
 
     <tr>
-      <td><pre>-tia.fsfill &lt;1|0&gt;</pre></td>
-      <td>Stretch TIA image completely while in fullscreen mode
-        (vs. an integral stretch which won't necessarily completely fill the screen).</td>
+      <td><pre>-tia.fs_stretch &lt;1|0&gt;</pre></td>
+      <td>Stretch TIA image completely while in fullscreen mode, vs. keeping the correct
+        aspect ratio.</td>
     </tr>
 
     <tr>
@@ -2645,7 +2645,7 @@
           <tr><td>PAL aspect</td><td>Width of TIA image in PAL mode</td><td>-tia.aspectp</td></tr>
           <tr><td>Emul. speed</td><td>Emulation speed</td><td>-speed</td></tr>
           <tr><td>Fullscreen</td><td>Self-explanatory</td><td>-fullscreen</td></tr>
-          <tr><td>Fullscreen fill</td><td>Completely fill TIA image in fullscreen</td><td>-tia.fsfill</td></tr>
+          <tr><td>Fullscreen stretch</td><td>In fullscreen mode, completely fill screen with TIA image</td><td>-tia.fs_stretch</td></tr>
           <tr><td>VSync</td><td>Enable vertical synced updates</td><td>-vsync</td></tr>
           <tr><td>Fast SuperCharger load</td><td>Skip progress loading bars for SuperCharger ROMs</td><td>-fastscbios</td></tr>
           <tr><td>Show UI messages</td><td>Overlay UI messages onscreen</td><td>-uimessages</td></tr>
