@@ -14,6 +14,10 @@
 
 6.0 to 6.x: (MM dd, 2019)
 
+  * Note: because of major event remapping changes, all remappings will be
+          reset to defaults; if you had custom mappings, they will need to
+          be re-entered again.
+
   * Updated internal ROM properties database to ROM-Hunter version 15
     (thanks go to RomHunter for his tireless research in this area).
     Related to this, updated the snapshot collection.
@@ -25,13 +29,19 @@
      - delayed player 1 swap
      - stuffed player move
 
+  * Added proper Retron77 port. (TODO: doc)
+
   * Completely removed 'Display_Height' stuff. (TODO: doc)
 
   * Disabled some developer options for 'Player settings'. (TODO: doc)
 
-  * Enhanced command dialog to display current state. 
+  * Enhanced command dialog to display current state.
 
   * Added automatic controller detection. (TODO: Stella.pro cleanup)
+
+  * Removed 'tia.fsfill' option, replacing it with 'tia.fs_stretch'.  This
+    new option allows to preserve TIA image aspect ratio in fullscreen
+    mode, or stretch to fill the entire screen.
 
   * Removed superfluous controller option 'PADDLES_IDIR'.
 
